--- a/src/app/features/property-details/property-details.component.html
+++ b/src/app/features/property-details/property-details.component.html
@@ -1,53 +1,89 @@
-<section class="panel" *ngIf="store.property$ | async as property" [formGroup]="form">
-  <h2>Property Details</h2>
-  <div class="grid">
-    <label>
-      Address
-      <input [value]="property.propertyDetails.address" disabled />
-    </label>
-    <label>
-      Market
-      <input formControlName="market" />
-    </label>
-    <label>
-      Sub Market
-      <input formControlName="subMarket" />
-    </label>
-    <label>
-      Property Type
-      <input formControlName="propertyType" />
-    </label>
-    <label>
-      Building Size (SF)
-      <input type="number" formControlName="buildingSizeSf" />
-    </label>
-  </div>
+<section class="details-layout" *ngIf="store.property$ | async as property">
+  <section class="card left-card">
+    <div class="map-placeholder">Map</div>
+    <h3 class="address">{{ property.propertyDetails.address }}</h3>
 
-  <h3>Broker Info</h3>
-  <table>
-    <thead>
-      <tr><th>Name</th><th>Company</th><th>Email</th><th>Phone</th></tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let broker of property.brokers">
-        <td>{{ broker.name }}</td>
-        <td>{{ broker.company }}</td>
-        <td>{{ broker.email }}</td>
-        <td>{{ broker.phone }}</td>
-      </tr>
-    </tbody>
-  </table>
+    <div class="kv" *ngFor="let item of leftInfoFields">
+      <label>{{ item.label }}</label>
+      <input
+        [value]="property.propertyDetails[item.key]"
+        [disabled]="item.key === 'address'"
+        (change)="onDetailFieldChange(item.key, $event)"
+      />
+    </div>
+  </section>
 
+  <section class="middle-column">
+    <section class="card">
+      <h3>Listing Details</h3>
+      <div class="kv" *ngFor="let item of listingFields">
+        <label>{{ item.label }}</label>
+        <input [value]="property.propertyDetails[item.key]" (change)="onDetailFieldChange(item.key, $event)" />
+      </div>
+    </section>
+
+    <section class="card">
+      <div class="section-head">
+        <h3>Broker Info</h3>
+        <button type="button" (click)="onAddBroker()">+ Add</button>
+      </div>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th>Company</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let broker of property.brokers">
+            <ng-container *ngIf="!broker.isDeleted">
+              <td><input [value]="broker.name" (change)="onBrokerFieldChange(broker, 'name', $event)" /></td>
+              <td><input [value]="broker.phone" (change)="onBrokerFieldChange(broker, 'phone', $event)" /></td>
+              <td><input [value]="broker.email" (change)="onBrokerFieldChange(broker, 'email', $event)" /></td>
+              <td><input [value]="broker.company" (change)="onBrokerFieldChange(broker, 'company', $event)" /></td>
+              <td><button type="button" class="danger" (click)="onDeleteBroker(broker.id)">Delete</button></td>
+            </ng-container>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </section>
+
+  <section class="card right-card">
+    <h3>Property Specs</h3>
+    <div class="kv" *ngFor="let item of specsFields">
+      <label>{{ item.label }}</label>
+      <input [value]="property.propertyDetails[item.key]" (change)="onDetailFieldChange(item.key, $event)" />
+    </div>
+  </section>
+</section>
+
+<section class="card lease-card" *ngIf="store.property$ | async as property">
   <h3>Lease Abstract</h3>
   <table>
     <thead>
-      <tr><th>Tenant</th><th>SF Occupied</th><th>Rent PSF</th><th>Lease Type</th></tr>
+      <tr>
+        <th>Tenant</th>
+        <th>Credit Type</th>
+        <th>SF Occupied</th>
+        <th>Rent PSF</th>
+        <th>Annual Escalations</th>
+        <th>Lease End</th>
+        <th>Lease Type</th>
+      </tr>
     </thead>
     <tbody>
       <tr *ngFor="let tenant of property.tenants">
         <td>{{ tenant.tenantName }}</td>
+        <td>{{ tenant.creditType }}</td>
         <td>{{ tenant.squareFeet }}</td>
         <td>{{ tenant.rentPsf }}</td>
+        <td>{{ tenant.annualEscalations }}%</td>
+        <td>{{ tenant.leaseEnd | date: 'M/d/y' }}</td>
         <td>{{ tenant.leaseType }}</td>
       </tr>
     </tbody>
