--- a/src/app/features/property-details/property-details.component.css
+++ b/src/app/features/property-details/property-details.component.css
@@ -86,6 +86,11 @@ input {
   border-color: #efb3b3;
 }
 
+.btn:disabled {
+  opacity: 0.55;
+  cursor: not-allowed;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
