--- a/src/app/features/property-details/property-details.component.html
+++ b/src/app/features/property-details/property-details.component.html
@@ -25,7 +25,7 @@
     <section class="card">
       <div class="section-head">
         <h3>Broker Info</h3>
-        <button type="button" class="btn btn-soft" (click)="onAddBroker()">+ Add</button>
+        <button type="button" class="btn btn-soft" [disabled]="!store.canAddBrokerOrTenant()" (click)="onAddBroker()">+ Add</button>
       </div>
       <div class="inline-error" *ngIf="actionError">{{ actionError }}</div>
 
@@ -47,8 +47,8 @@
               <td><input [value]="broker.email" (change)="onBrokerFieldChange(broker, 'email', $event)" /></td>
               <td><input [value]="broker.company" (change)="onBrokerFieldChange(broker, 'company', $event)" /></td>
               <td class="actions-cell">
-                <button type="button" class="btn btn-primary" (click)="onSaveBroker(broker.id)">Save</button>
-                <button type="button" class="btn btn-danger" (click)="onDeleteBroker(broker.id)">Delete</button>
+                <button type="button" class="btn btn-primary" [disabled]="!store.canSaveBroker(broker.id)" (click)="onSaveBroker(broker.id)">Save</button>
+                <button type="button" class="btn btn-danger" [disabled]="!store.canDeleteBroker(broker.id)" (click)="onDeleteBroker(broker.id)">Delete</button>
               </td>
             </ng-container>
           </tr>
