--- a/src/app/features/underwriting/underwriting.component.css
+++ b/src/app/features/underwriting/underwriting.component.css
@@ -95,6 +95,12 @@ td {
   font-size: 12px;
 }
 
+.field-error {
+  margin-top: 4px;
+  color: #b32222;
+  font-size: 11px;
+}
+
 .table-wrap {
   width: 100%;
   overflow-x: auto;
